adding dt endpoint get user item restaurant